--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
         "@types/react-dom": "^16.9.5",
         "apexcharts": "^3.16.1",
         "axios": "^0.19.2",
+        "bootstrap": "^4.4.1",
         "csv-parse": "^4.8.8",
+        "font-awesome": "^4.7.0",
         "react": "^16.13.0",
         "react-apexcharts": "^1.3.6",
         "react-dom": "^16.13.0",
