--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@material-ui/core": "^4.9.7",
+        "@material-ui/icons": "^4.9.1",
         "@testing-library/jest-dom": "^4.2.4",
         "@testing-library/react": "^9.5.0",
         "@testing-library/user-event": "^7.2.1",
@@ -12,9 +14,7 @@
         "@types/react-dom": "^16.9.5",
         "apexcharts": "^3.16.1",
         "axios": "^0.19.2",
-        "bootstrap": "^4.4.1",
         "csv-parse": "^4.8.8",
-        "font-awesome": "^4.7.0",
         "react": "^16.13.0",
         "react-apexcharts": "^1.3.6",
         "react-dom": "^16.13.0",
